[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/turret/Lazer_turret.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/turret/Green_base.png" type="Texture" id=2]
[ext_resource path="res://scripts/lazer_turret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="LazerTurret" type="Area2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 3 )

[node name="Turret" type="Sprite" parent="."]
position = Vector2( 0, -6 )
rotation = -1.5708
texture = ExtResource( 1 )
offset = Vector2( 3, 0 )

[node name="FireContainer" type="Node2D" parent="Turret"]
position = Vector2( 12, 0 )

[node name="FireDebounce" type="Timer" parent="Turret"]
wait_time = 0.8
one_shot = true

[node name="Shooter" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="VisibleNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -4 )

[connection signal="body_entered" from="." to="." method="_on_LazerTurret_body_entered"]
[connection signal="screen_entered" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
